# OmniM0

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gcc-arm-none-eabi.cmake
API/API_I2C/: API_I2C.c  API_I2C.h  soft_i2c_hal.h
API/API_SPI/: API_SPI.c  API_SPI.h  soft_spi_hal.h
API/inc/: Encoder.h  adc.h  exti.h  gpio.h  pwm.h  tim.h  usart.h
API/src/: Encoder.c  adc.c  exti.c  gpio.c  pwm.c  tim.c  usart.c
A_Entry/: main.c
BSP/BMP280/: BMP280.c  BMP280.h
BSP/Buzzer/: Buzzer.c  Buzzer.h
BSP/JY61P/: jy61p.c  jy61p.h
BSP/KEY/: KEY.c  KEY.h
BSP/LED/: LED.c  LED.h
BSP/MPU6050/: MPU6050.c  MPU6050.h  MPU6050_Int.c  MPU6050_Int.h
BSP/MPU6050/eMPL/: dmpKey.h  inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
BSP/NRF24L01/: NRF24L01.c  NRF24L01.h  NRF24L01_Define.h
BSP/OLED/: OLED.c  OLED.h  OLED_Data.c
BSP/QMC5883P/: QMC5883P.c  QMC5883P.h
BSP/StepMotor/: StepMotor.c  StepMotor.h
BSP/TB6612/: TB6612.c  TB6612.h
BSP/gray_adc/: gray_adc.c  gray_adc.h
Core/MSPM0G3507/: G3507_delay.c  G3507_sys.c
Core/MSPM0G3507/G3507_soft_i2c/: G3507_soft_i2c.c  G3507_soft_i2c.h
Core/MSPM0G3507/G3507_soft_spi/: G3507_soft_spi.c  G3507_soft_spi.h
Core/MSPM0G3507/cmake/: mspm0g3507.lds
Core/MSPM0G3507/inc/: G3507_Encoder.h  G3507_adc.h  G3507_exti.h  G3507_gpio.h  G3507_pwm.h  G3507_sys.h  G3507_tim.h  G3507_usart.h
Core/MSPM0G3507/src/: G3507_Encoder.c  G3507_adc.c  G3507_exti.c  G3507_gpio.c  G3507_pwm.c  G3507_tim.c  G3507_usart.c
Enroll/: Enroll.c  Enroll.h  Enroll_Internal.h  G3507_hw_config.h  G3507_pinmux.h
OpenOCD/: G3507_OpenOCD.cfg
SYSTEM/: BusRate.h  Delay.h  IrqPriority.h  sys.c  sys.h
app/Control/: Control.c  Control.h
app/Control_Task/: Control_Task.c  Control_Task.h
app/Detect/: Detect.c  Detect.h
app/Filter/: Filter.c  Filter.h
app/My_Usart/: My_Usart.c  My_Usart.h
app/PID/: PID.c  PID.h
app/Tasks/: Tasks.c  Tasks.h
docs/: arch-guide.md
